# agent_skills

./: .gitignore  README.md  pyproject.toml
.cursor/rules/python/: agentic.mdc  skills_prompt.mdc  skills_prompt_cn.mdc
agent_skills/: __init__.py
agent_skills/cli/: __init__.py  installer.py  main.py
agent_skills/core/: __init__.py  docker_runner.py  editor.py  execution.py  executor.py  filesystem.py  middleware.py  skill_manager.py  tools_factory.py  types.py
agent_skills/mcp/: __init__.py  prompts.py  server.py  tools.py
agent_skills/sandbox/: __init__.py  sandbox.py
agent_skills/skills/: .gitkeep
agent_skills/skills/coprime-checker/: SKILL.md
agent_skills/skills/file-downloader/: SKILL.md  SKILL_cn.md
agent_skills/skills/gcd-calculator/: SKILL.md
agent_skills/skills/prime-list-generator/: SKILL.md
docker/: Dockerfile
docker_config/: .dockerignore
docs/: README_cn.md  cli.md  cli_cn.md  docker-environment.md  docker-environment_cn.md  examples.md  mcp-integration.md  mcp-integration_cn.md  middleware-integration.md  middleware-integration_cn.md  skill-format.md  tools.md  tools_cn.md
examples/: demo_deepagent.py  demo_deepagent_MCP.py  demo_deepagent_middleware.py  demo_docker_mcp.py  demo_local_mcp.py  demo_middleware.py  demo_skills.py  demo_with_docker.py
examples/workspace/: nvidia_research_report_english.md  英伟达公司调研报告_2024年12月.md
tests/: __init__.py  conftest.py  test_cli_installer.py  test_editor.py  test_executor.py  test_filesystem.py  test_mcp_path_safety.py  test_sandbox.py  test_skill_manager.py
(+23 files in other folders)
